Add AsyncConfig